# embedded-template

./: .gitignore  LICENSE  README.md  meson.build
cross/: cortex-m0.txt  cortex-m0plus.txt  cortex-m3.txt  cortex-m33.txt  cortex-m4.txt  cortex-m7.txt  cortexm3.txt  cortexm33.txt  cortexm4.txt  cortexm7.txt  stm32f0.ini  stm32f1.ini  stm32f2.ini  stm32f3.ini  stm32f4.ini  stm32f7.ini  stm32g0.ini  stm32g4.ini  stm32h7.ini  stm32l0.ini  stm32l1.ini  stm32l4.ini  stm32l5.ini  stm32u5.ini  stm32wb.ini  stm32wl.ini  toolchain.ini  toolchain.txt
subprojects/: .gitignore  arm-cmsis.wrap  cmsis_device_f0.wrap  cmsis_device_f1.wrap  cmsis_device_f2.wrap  cmsis_device_f3.wrap  cmsis_device_f4.wrap  cmsis_device_f7.wrap  cmsis_device_g0.wrap  cmsis_device_g4.wrap  cmsis_device_h7.wrap  cmsis_device_l0.wrap  cmsis_device_l1.wrap  cmsis_device_l4.wrap  cmsis_device_l5.wrap  cmsis_device_u5.wrap  cmsis_device_wb.wrap  cmsis_device_wl.wrap  compiler-rt.wrap  freertos-posix.wrap  freertos.wrap  libcxx.wrap  libcxxabi.wrap  libunwind.wrap  llvm.wrap  picolibc.wrap  stm32f0_hal.wrap  stm32f1_hal.wrap  stm32f2_hal.wrap  stm32f3_hal.wrap  stm32f4_hal.wrap  stm32f7_hal.wrap  stm32g0_hal.wrap  stm32g4_hal.wrap  stm32h7_hal.wrap  stm32l0_hal.wrap  stm32l1_hal.wrap  stm32l4_hal.wrap  stm32l5_hal.wrap  stm32u5_hal.wrap  (+2 more)
subprojects/freertos_config/: meson.build
subprojects/packagefiles/compiler-rt/: meson.build  meson_options.txt
